# bert-Chinese-Text-Classification-Pytorch

./: .gitignore  pyproject.toml  run.py
