[tool.poetry]
name = "bert-chinese-text-classification-pytorch"
version = "0.1.0"
description = ""
authors = ["GuoDapeng <guodapeng@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sklearn = "0.0"
tqdm = "^4.66.4"
boto3 = "^1.34.135"
requests = "^2.32.3"
regex = "^2024.5.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
